--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical">
+<!--    match_parent	Fills the parent container completely, even if content is smaller.-->
+<!--    wrap_content	Adjusts to the size of the content, not exceeding it.-->
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
