--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="@string/question_Australia_text"
-        android:gravity="center"
+         android:gravity="left"
         android:padding="24dp"/>
     <LinearLayout
         android:layout_width="wrap_content"
